# EndBrain

./: .gitignore  README.md  pyproject.toml
docs/: structruing.md
src/endbrain/: __init__.py  config.py  graph.py
src/endbrain/memory/: __init__.py  graph_state.py
src/endbrain/model/: __init__.py  records.py
src/endbrain/query/: __init__.py  scoring.py
src/endbrain/storage/: __init__.py  local_storage.py
src/endbrain/utils/: __init__.py  memory.py  text.py  time.py
tests/: conftest.py  test_entity_api.py  test_eviction.py  test_init.py  test_persistence.py  test_query.py  test_relation_api.py  test_sync.py
